@@ -7,7 +7,7 @@
     "timeLimit": 240,
     "cyclePerTime": 4.0,
     "dose": 100.0,
-    "doseTime": 216.0,
+    "doseTime": 150.0,
     "vc": 10.0,
     "k_a": 1.0,
     "k_12": 0.3,
@@ -18,7 +18,7 @@
     "timeLimit": 240,
     "cyclePerTime": 10.0,
     "dose": 10.0,
-    "doseTime": 216.0,
+    "doseTime": 150.0,
     "vc": 1.0,
     "vp": 2.75
   },
@@ -38,11 +38,15 @@
     }]
   },
   "looseDyn": {
-    "drug2symptom": 0.1,
+    "drugPotency": 0.5,
     "morbidity": 0.1,
     "morbFactor": 0.000001,
-    "mp2symptom": 0.1,
-    "morb2mp": 0.1
+    "morb2mp": 1.0,
+    "mp2mpo": 1.0,
+    "detectorSites": 20,
+    "P_occupySite": 0.5,
+    "P_releaseMPO": 0.5,
+    "blockDuration": 5.0
   },
   "ldRates": {
     "MP": [{
