@@ -3,13 +3,7 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LocaleDyn.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/cfg/parameters.json</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/SlaveAgent.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Loose.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LooseDyn.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Detector.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Controller.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/view/ObsDrug.java</file>
         </group>
     </open-files>
 </project-private>
